plugins/kotlin/idea/tests/testData/highlighterMetaInfo/mismatchPackageDirectory.kt.highlighting.k2
<!HIGHLIGHTING("severity='WEAK WARNING'; descr='Package directive does not match the file location'")!>package x<!>
// TOOL: org.jetbrains.kotlin.idea.k2.codeinsight.inspections.PackageDirectoryMismatchInspection
// IGNORE_K1
// HIGHLIGHT_WARNINGS
// IMPLICIT_PACKAGE_PREFIX: "foo"
